--- a/css/style.css
+++ b/css/style.css
@@ -152,8 +152,7 @@ h1 {
 .popup {
 	width: 100%;
 	height: 100%;
-	margin-left: 0;
-	margin-right: 0;
+	margin-left: -8px;
 	margin-top: -200;
 	position: absolute;
 	background-color: rgba(0,0,0,0.9);
