--- a/css/style.css
+++ b/css/style.css
@@ -56,24 +56,24 @@
 
 .overlay {
 	position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  z-index: 10;
-  background-image: url('http://i.imgur.com/G5w6qAD.gif');
-  background-size: cover;
-  background-position: center;
-  opacity: .9;
+  	top: 0;
+  	left: 0;
+  	width: 100%;
+  	height: 100%;
+  	z-index: 10;
+  	background-image: url('http://i.imgur.com/G5w6qAD.gif');
+  	background-size: cover;
+  	background-position: center;
+  	opacity: .9;
 }
 
 .overlay2 {
 	background-color: rgba(0,0,0,0.7);
 	position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
+  	top: 0;
+  	left: 0;
+  	width: 100%;
+  	height: 100%;
 }
 
 .name {
@@ -128,9 +128,9 @@ h1 {
 }
 
 .playerturn {
-  -webkit-animation-duration: 1s;
-  -webkit-animation-delay: 0s;
-  -webkit-animation-iteration-count: 1;
+  	-webkit-animation-duration: 1s;
+  	-webkit-animation-delay: 0s;
+  	-webkit-animation-iteration-count: 1;
 }
 
 .button:hover {
@@ -178,4 +178,30 @@ h1 {
 
 .again:hover {
 	cursor: pointer;
+}
+
+#submit {
+	cursor: pointer;
+}
+
+input {
+	color: white;
+	background-color: black;
+	border: none;
+}
+
+::-webkit-input-placeholder {
+   color: #D3D3D3;
+}
+
+:-moz-placeholder { 
+   color: #D3D3D3;
+}
+
+::-moz-placeholder { 
+   color: #D3D3D3;
+}
+
+:-ms-input-placeholder {
+   color: #D3D3D3;
 }
